--- a/src/App.scss
+++ b/src/App.scss
@@ -4,20 +4,20 @@
 @import '~@bryntum/demo-resources/scss/example.scss';
 
 .striped {
-    background: repeating-linear-gradient(
-        -45deg,
-        rgba(230, 230, 230, 0.3),
-        rgba(230, 230, 230, 0.3) 10px,
-        rgba(240, 240, 240, 0.3) 5px,
-        rgba(240, 240, 240, 0.3) 20px
-    );
+    background: repeating-linear-gradient(-45deg,
+            rgba(230, 230, 230, 0.3),
+            rgba(230, 230, 230, 0.3) 10px,
+            rgba(240, 240, 240, 0.3) 5px,
+            rgba(240, 240, 240, 0.3) 20px);
 }
 
 .selected-event {
     margin-right: 1em;
+
     label {
         opacity: 0.7;
     }
+
     span {
         font-weight: 400;
     }
@@ -48,4 +48,14 @@
 
 .b-theme-classic-material .b-has-label label {
     color: #616161;
+}
+
+.b-celladd-hover {
+    background-color: white;
+    border: 1px solid #3953EF;
+    // position: relative;
+}
+
+.b-celladd-dragging-hover {
+    background-color: #9FAEFF;
 }
